Fix code overflow problem on smaller screen sizes

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,10 @@ ul {
         margin-left: 0;
         left: 0;
     }
+
+    pre {
+        overflow: auto;
+    }
 }
 
 
